Added heart animation

--- a/lib/heart/heart.css
+++ b/lib/heart/heart.css
@@ -1,9 +1,9 @@
 @keyframes Heart-beat {
   0%  { transform: scale(1); }
-  10% { transform: scale(1.1); }
+  5% { transform: scale(1.1); }
+  15% { transform: scale(1); }
+  20% { transform: scale(1.1); }
   30% { transform: scale(1); }
-  40% { transform: scale(1.1); }
-  60% { transform: scale(1); }
 }
 
 .Heart {
@@ -15,7 +15,7 @@
 }
 
 .Heart--animated {
-  /*animation: Heart-beat 1.1s infinite ease-in;*/
+  animation: Heart-beat 2s infinite ease-in;
 }
 
 .Heart--banner {
